# wccpp

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  ccwc.cpp
src/wctool/: wctool.hpp
tests/: ArtOfWarTests.cpp  CMakeLists.txt  CountCharsTests.cpp  CountLinesTests.cpp  CountWordsTests.cpp
